--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1> La page en rose </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <title>Yael's Portfolio</title>
+</head>
+<body>
+    <h1>La page en rose</h1>
+</body>
+</html>
