Add header and header style: background, two buttoms with corresponding styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Welcome</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <li class="header__download-button"> <a class="header__link" href="#">Look CV</a></li>
+            <li class="header__contact-button"><a class="header__link" href="#">Contact</a></li>
+        </ul>
+    </header>
 </body>
 </html>
