Add cover-section with background style

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
             <li class="header__contact-button"><a class="header__link" href="#">Contact</a></li>
         </ul>
     </header>
+    <section class="cover-section">
+
+    </section>
 </body>
 </html>
