--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         </ul>
     </header>
     <section class="cover-section">
-
+        <div class="introduction-container">
+            <span class="introduction-container__greeting">Hello!</span>
+            <span class="introduction-container__name">I'm Yael Castro</span>
+            <span class="introduction-container__description">Software Developer and more...</span>
+        </div>
     </section>
 </body>
 </html>
