Add new span in introduction name to separate colors in the text line

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="cover-section">
         <div class="introduction-container">
             <span class="introduction-container__greeting">Hello!</span>
-            <span class="introduction-container__name">I'm Yael Castro</span>
+            <span class="introduction-container__name">I'm <span class="introduction-container__name_green">Yael Castro</span>  </span>
             <span class="introduction-container__description">Software Developer and more...</span>
         </div>
     </section>
