Add html structure and content to self-introduction section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,44 @@
             <span class="introduction-container__description">Software Developer and more...</span>
         </div>
     </section>
+    <section class="self-introduction-section">
+        <h1 class="self-introduction-section__title">Let me introduce myself</h1>
+        <p class="self-introduction-section__description">Mexican 🌮 Developer based on Guadalajara. Curious from birth, solution creator by vocation. I enjoy learning from multidisciplinary teams.Today, in a remote environment.</p>
+        <table class="self-introduction-section__skills">
+            <tr>
+                <th>Languages</th>
+                <th>Tools</th>
+                <th>More</th>
+            </tr>
+            <tr>
+                <td>Python</td>
+                <td>Git(hub)</td>
+                <td>Linux</td>
+            </tr>
+            <tr>
+                <td>Java</td>
+                <td>Docker</td>
+                <td>M365</td>
+            </tr>
+            <tr>
+                <td>Bash</td>
+                <td>VSCode</td>
+                <td>Networking</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>MySQL</td>
+            </tr>
+            <tr>
+                <td>HTML5</td>
+                <td>Figma</td>
+            </tr>
+            <tr>
+                <td>CSS3</td>
+                <td>Balsamiq</td>
+            </tr>
+        </table>
+        <button class="self-introduction-section__button">Look CV</button>
+    </section>
 </body>
 </html>
