Add spans in self introduction description to change font style: color and weight

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
     </section>
     <section class="self-introduction-section">
-        <h1 class="self-introduction-section__title">Let me introduce myself</h1>
-        <p class="self-introduction-section__description">Mexican 🌮 Developer based on Guadalajara. Curious from birth, solution creator by vocation. I enjoy learning from multidisciplinary teams.Today, in a remote environment.</p>
+        <h1 class="self-introduction-section__title section-title">Let me introduce myself</h1>
+        <p class="self-introduction-section__description">Mexican 🌮 Developer based on Guadalajara. <span> Curious </span>from birth, <span> solution creator </span> by vocation. I enjoy learning from <span> multidisciplinary </span> teams. <br> Today, in a <span> remote </span> environment.</p>
         <table class="self-introduction-section__skills">
             <tr>
                 <th>Languages</th>
