Add projects section in index.html, the structure and content will be created

--- a/index.html
+++ b/index.html
@@ -62,5 +62,34 @@
         </table>
         <button class="self-introduction-section__button">Look CV</button>
     </section>
+    <section class="projects-section">
+        <h1>What I've done</h1>
+        <div class="projects-section__grid">
+            <div class="project">
+                <span class="project__title">Polaris</span>
+                <p>Mobile first web page</p>
+            </div>
+            <div class="project">
+                <span class="project__title">RaspigramBot</span>
+                <p class="project__description">Telegram bot to handle Raspberry Pi information</p>
+            </div>
+            <div class="project">
+                <span class="project__title">HeyAmikoo</span>
+                <p class="project__description">NLP application for robotics</p>
+            </div>
+            <div class="project">
+                <span class="project__title">Hochob</span>
+                <p class="project__description">Multicontainer multimedia application</p>
+            </div>
+            <div class="project">
+                <span class="project__title">Power Wire Monitoring System</span>
+                <p class="project__description">SPA with map support</p>
+            </div>
+            <div class="project">
+                <span class="project__title">RoutData</span>
+                <p class="project__description">A way to improve public transport efficiency</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
