Add classes in projects section h1

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <button class="self-introduction-section__button">Look CV</button>
     </section>
     <section class="projects-section">
-        <h1>What I've done</h1>
+        <h1 class="projects-section__title section-title">What I've done</h1>
         <div class="projects-section__grid">
             <div class="project">
                 <span class="project__title">Polaris</span>
