Add missing class to Polaris project title

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="projects-section__grid">
             <div class="project">
                 <span class="project__title">Polaris</span>
-                <p>Mobile first web page</p>
+                <p class="project__description">Mobile first web page</p>
             </div>
             <div class="project">
                 <span class="project__title">RaspigramBot</span>
