Modify power wire project from monitoring system to only monitoring

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p class="project__description">Multicontainer multimedia application</p>
             </div>
             <div class="project">
-                <span class="project__title">Power Wire Monitoring System</span>
+                <span class="project__title">Power Wire Monitoring</span>
                 <p class="project__description">SPA with map support</p>
             </div>
             <div class="project">
