--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </section>
     <section class="contact-section">
-        <span class="contact-section__title">Hello again!</span>
+        <span class="contact-section__title section-title">Hello again!</span>
         <span class="contact-section__invite">You want to have a word?</span>
         <button class="contact-section__contact-button">Contact me</button>
         <span class="contact-section__more">You want to have see more?</span>
