Fix text in contact section: 'You want to have see...' to 'You want to see...'

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <span class="contact-section__title section-title">Hello again!</span>
         <span class="contact-section__invite">You want to have a word?</span>
         <button class="contact-section__contact-button">Contact me</button>
-        <span class="contact-section__more">You want to have see more?</span>
+        <span class="contact-section__more">You want to see more?</span>
         <div class="contact-section__logo-container">
             <div class="logo github"></div>
             <div class="logo linkedin"></div>
