Change contact button to anchor

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -94,7 +94,7 @@
     <section class="contact-section">
         <span class="contact-section__title section-title">Hello again!</span>
         <span class="contact-section__invite">You want to have a word?</span>
-        <button class="contact-section__contact-button">Contact me</button>
+        <span class="contact-section__contact-button"><a href="#">Contact me</a></span>
         <span class="contact-section__more">You want to see more?</span>
         <div class="contact-section__logo-container">
             <div class="logo github"></div>
