--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="./assets/styles/tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="./assets/styles/desktop.css" media="screen and (min-width: 1366px)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Pridi:wght@300;500&display=swap" rel="stylesheet">
     <title>Welcome</title>
