Add links to navbar buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <ul>
-            <li class="header__download-button"> <a class="header__link" href="#">Look CV</a></li>
-            <li class="header__contact-button"><a class="header__link" href="#">Contact</a></li>
+            <li class="header__download-button"> <a class="header__link" href="https://drive.google.com/file/d/1E8XTF_GR54wtxqcqvpPcCrUsOUavFIpQ/view" target="_blank" rel="noopener noreferrer">Look CV</a></li>
+            <li class="header__contact-button"><a class="header__link" href="#contact-section">Contact</a></li>
         </ul>
     </header>
     <section class="cover-section">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </section>
-    <section class="contact-section">
+    <section id="contact-section" class="contact-section">
         <span class="contact-section__title section-title">Hello again!</span>
         <span class="contact-section__invite">You want to have a word?</span>
         <span class="contact-section__contact-button"><a href="#">Contact me</a></span>
