Add link in look cv button, and change the button element to anchor

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <td>Balsamiq</td>
             </tr>
         </table>
-        <button class="self-introduction-section__button">Look CV</button>
+        <a href="https://drive.google.com/file/d/1E8XTF_GR54wtxqcqvpPcCrUsOUavFIpQ/view" class="self-introduction-section__button" target="_blank" rel="noopener noreferrer">Look CV</a>
     </section>
     <section class="projects-section">
         <h1 class="projects-section__title section-title">What I've done</h1>
