Add links to projects in projects section. The anchor items will be added in the grid items

--- a/index.html
+++ b/index.html
@@ -64,32 +64,44 @@
         </table>
         <a href="https://drive.google.com/file/d/1E8XTF_GR54wtxqcqvpPcCrUsOUavFIpQ/view" class="self-introduction-section__button" target="_blank" rel="noopener noreferrer">Look CV</a>
     </section>
-    <section class="projects-section">
+    <section id="projects-section" class="projects-section">
         <h1 class="projects-section__title section-title">What I've done</h1>
         <div class="projects-section__grid">
             <div class="project">
-                <span class="project__title">Polaris</span>
-                <p class="project__description">Mobile first web page</p>
+                <a href="https://github.com/cyaelcastro/cyaelcastro.github.io" target="_blank" rel="noopener noreferrer">
+                    <span class="project__title">Polaris</span>
+                    <p class="project__description">Mobile first web page</p>
+                </a>
             </div>
             <div class="project">
-                <span class="project__title">RaspigramBot</span>
-                <p class="project__description">Telegram bot to handle Raspberry Pi information</p>
+                <a href="https://github.com/cyaelcastro/RasPiTeleBot" target="_blank" rel="noopener noreferrer">
+                    <span class="project__title">RaspigramBot</span>
+                    <p class="project__description">Telegram bot to handle Raspberry Pi information</p>
+                </a>
             </div>
             <div class="project">
-                <span class="project__title">HeyAmikoo</span>
-                <p class="project__description">NLP application for robotics</p>
+                <a href="https://github.com/cyaelcastro/HeyAmikoo" target="_blank" rel="noopener noreferrer">
+                    <span class="project__title">HeyAmikoo</span>
+                    <p class="project__description">NLP application for robotics</p>
+                </a>
             </div>
             <div class="project">
-                <span class="project__title">Hochob</span>
-                <p class="project__description">Multicontainer multimedia application</p>
+                <a href="https://github.com/hochob/hochob" target="_blank" rel="noopener noreferrer">
+                    <span class="project__title">Hochob</span>
+                    <p class="project__description">Multicontainer multimedia application</p>
+                </a>
             </div>
             <div class="project">
-                <span class="project__title">Power Wire Monitoring</span>
-                <p class="project__description">SPA with map support</p>
+                <a href="https://github.com/cyaelcastro/Power-Wire-Monitoring-System" target="_blank" rel="noopener noreferrer">
+                    <span class="project__title">Power Wire Monitoring</span>
+                    <p class="project__description">SPA with map support</p>
+                </a>
             </div>
             <div class="project">
-                <span class="project__title">RoutData</span>
-                <p class="project__description">A way to improve public transport efficiency</p>
+                <a href="#projects-section">
+                    <span class="project__title">RoutData</span>
+                    <p class="project__description">A way to improve public transport efficiency</p>
+                </a>
             </div>
         </div>
     </section>
