Add anchor items in github and linkedin logos, with their respective links

--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
         <span class="contact-section__contact-button"><a href="#">Contact me</a></span>
         <span class="contact-section__more">You want to see more?</span>
         <div class="contact-section__logo-container">
-            <div class="logo github"></div>
-            <div class="logo linkedin"></div>
+            <div class="logo github">
+                <a href="https://github.com/cyaelcastro/"></a>
+            </div>
+            <div class="logo linkedin">
+                <a href="https://www.linkedin.com/in/cyaelcastro/"></a>
+            </div>
         </div>
 
     </section>
