Add tags in logo anchors to avoid tabnabbing and to open links in another tab

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <span class="contact-section__more">You want to see more?</span>
         <div class="contact-section__logo-container">
             <div class="logo github">
-                <a href="https://github.com/cyaelcastro/"></a>
+                <a href="https://github.com/cyaelcastro/" target="_blank" rel="noopener noreferrer"></a>
             </div>
             <div class="logo linkedin">
-                <a href="https://www.linkedin.com/in/cyaelcastro/"></a>
+                <a href="https://www.linkedin.com/in/cyaelcastro/" target="_blank" rel="noopener noreferrer"></a>
             </div>
         </div>
 
