--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     <section class="self-introduction-section">
         <h1 class="self-introduction-section__title section-title">Let me introduce myself</h1>
-        <p class="self-introduction-section__description">Mexican 🌮 Developer based on Guadalajara. <span> Curious </span>from birth, <span> solution creator </span> by vocation. I enjoy learning from <span> multidisciplinary </span> teams. <br> Today, in a <span> remote </span> environment.</p>
+        <p class="self-introduction-section__description">Mexican 🌮 Developer based in Guadalajara. <span> Curious </span>from birth, <span> solution creator </span> by vocation. I enjoy learning from <span> multidisciplinary </span> teams. <br> Today, in a <span> remote </span> environment.</p>
         <table class="self-introduction-section__skills">
             <tr>
                 <th>Languages</th>
